fixbug ECM-2720 Set align for 'Thumbnail image' after upload image for node in defaul skin

--- a/portlet/ecm/src/main/webapp/skin/webui/component/browse/MacStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/browse/MacStylesheet.css
@@ -409,4 +409,8 @@
 .UIBrowseContentPortlet .UITrees .Node .NodeIcon {
 	padding-left: 25px;
 }
+
+.UIJCRExplorer .UITrees .Node .NodeIcon {
+	padding-left: 25px;
+}
 	
