--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
@@ -376,6 +376,7 @@
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIFormGrid .FieldLabel {	
 	width: 130px;
+	vertical-align: middle;
 }
 
 /*############################## -- END UIFolderForm -- ##############################*/
