--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/control/DefaultStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/control/DefaultStylesheet.css
@@ -330,3 +330,7 @@
 .UIJCRExplorerPortlet .UIJCRExplorer .UIFormGrid .FieldLabel {
   width: 128px;
 }
+
+.UIJCRExplorerPortlet .UIJCRExplorer .UIFormGrid .UIFormUploadInput .SelectFileFrame {
+	width: auto;
+}
